--- a/app/src/main/res/layout/activity_collpased_top.xml
+++ b/app/src/main/res/layout/activity_collpased_top.xml
@@ -11,6 +11,7 @@
         android:id="@+id/id_appbarlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
 
@@ -26,41 +27,21 @@
         需要注意的是，后面两种模式基本只有在CollapsingToolbarLayout才有用，
         而前面两种模式基本是需要一起使用的，也就是说，这些flag的使用场景，基本已经固定了。
         -->
-        <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/id_toolbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--android:background="?attr/colorPrimary"-->
-        <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
-        <!--app:layout_scrollFlags="scroll|enterAlways"-->
-        <!--app:popupTheme="@style/AppTheme.PopupOverlay"-->
-        <!--app:title="Assemble Here" />-->
-
-        <!--<android.support.design.widget.TabLayout-->
-        <!--android:id="@+id/id_tablayout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--app:tabGravity="fill"-->
-        <!--app:tabIndicatorColor="@color/main_white"-->
-        <!--app:tabSelectedTextColor="@color/main_white"-->
-        <!--app:tabTextColor="@color/lightgrey" />-->
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collasping_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginEnd="64dp"
-            app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:statusBarScrim="?attr/colorPrimary">
+            app:contentScrim="#30469b"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_menu_camera"
-                app:layout_collapseMode="parallax"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/ic_user_background"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="pin"
                 app:layout_collapseParallaxMultiplier="0.6" />
 
             <android.support.v7.widget.Toolbar
@@ -68,42 +49,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:layout_collapseMode="parallax"
-                app:layout_scrollFlags="scroll"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
                 app:title="Assemble Here" />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/id_tablayout"
+        <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabGravity="fill"
-            app:tabIndicatorColor="@color/main_white"
-            app:tabSelectedTextColor="@color/main_white"
-            app:tabTextColor="@color/lightgrey" />
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/id_tablayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:tabGravity="fill"
+                app:tabIndicatorColor="@color/main_white"
+                app:tabSelectedTextColor="@color/main_white"
+                app:tabTextColor="@color/lightgrey" />
+
+
+
+        </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
 
+
     <include layout="@layout/content_drawer_navigation" />
 
-    <!--<android.support.v4.view.ViewPager-->
-    <!--android:id="@+id/id_viewpager"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
-    <!--/>-->
-
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/id_floatingactionbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
+
