--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/id_drawerlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/id_drawerlayout"
     android:fitsSystemWindows="true"
     tools:context="com.lpf.tools.MainActivity"
     tools:openDrawer="start">
 
-    <include layout="@layout/app_bar_drawer_navigation"
+    <include
+        layout="@layout/app_bar_drawer_navigation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
 
     <android.support.design.widget.NavigationView
         android:id="@+id/id_navigationview"
@@ -20,6 +22,18 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_drawer_navigation"
+        app:itemTextColor="@drawable/selector_nav_menu_textcolor"
         app:menu="@menu/activity_drawer_navigation_drawer"></android.support.design.widget.NavigationView>
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:background="@color/greenyellow"-->
+        <!--android:layout_gravity="end">-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:text="asdfasdfa"/>-->
+    <!--</LinearLayout>-->
 
 </android.support.v4.widget.DrawerLayout>
