--- a/app/src/main/res/layout/activity_collpased_top.xml
+++ b/app/src/main/res/layout/activity_collpased_top.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/id_coordinatorlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,27 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-
-        <!--
-        app:layout_scrollFlags的意思是：
-
-            设置的layout_scrollFlags有如下几种选项：
-                scroll: 所有想滚动出屏幕的view都需要设置这个flag- 没有设置这个flag的view将被固定在屏幕顶部。
-                enterAlways: 这个flag让任意向下的滚动都会导致该view变为可见，启用快速“返回模式”。
-                enterAlwaysCollapsed: 当你的视图已经设置minHeight属性又使用此标志时，你的视图只能以最小高度进入，只有当滚动视图到达顶部时才扩大到完整高度。
-                exitUntilCollapsed: 当视图会在滚动时，它一直滚动到设置的minHeight时完全隐藏。
-
-        需要注意的是，后面两种模式基本只有在CollapsingToolbarLayout才有用，
-        而前面两种模式基本是需要一起使用的，也就是说，这些flag的使用场景，基本已经固定了。
-        -->
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collasping_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:contentScrim="#30469b"
+            app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
@@ -41,14 +26,15 @@
                 android:scaleType="centerCrop"
                 android:src="@mipmap/ic_user_background"
                 android:fitsSystemWindows="true"
-                app:layout_collapseMode="pin"
+                app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.6" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/id_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
+                app:theme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_collapseMode="pin"
                 app:title="Assemble Here" />
 
 
