--- a/app/src/main/res/layout/app_bar_drawer_navigation.xml
+++ b/app/src/main/res/layout/app_bar_drawer_navigation.xml
@@ -11,6 +11,7 @@
         android:id="@+id/id_appbarlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
 
@@ -52,14 +53,13 @@
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:statusBarScrim="?attr/colorPrimary">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="match_parent"
                 android:scaleType="fitXY"
-                android:src="@drawable/ic_menu_camera"
+                android:src="@mipmap/ic_user_background"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.6" />
 
@@ -67,9 +67,8 @@
                 android:id="@+id/id_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:layout_collapseMode="parallax"
+                app:layout_collapseMode="pin"
                 app:layout_scrollFlags="scroll"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
                 app:title="Assemble Here" />
