添加音频条视图

--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -7,6 +7,10 @@
     android:orientation="vertical"
     tools:context="com.lpf.tools.CustomViewActivity">
 
+    <com.lpf.tools.views.VolumeView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
+
     <com.lpf.tools.views.TwinkleTextView
         android:layout_width="300dp"
         android:layout_height="200dp"
