--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -8,6 +8,7 @@
     tools:context="com.lpf.tools.CustomViewActivity">
 
     <com.lpf.tools.views.VolumeView
+        android:id="@+id/id_volume"
         android:layout_width="match_parent"
         android:layout_height="100dp"/>
 
