--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -1,46 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.lpf.tools.CustomViewActivity">
 
-    <com.lpf.tools.views.VolumeView
-        android:id="@+id/id_volume"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <com.lpf.tools.views.TwinkleTextView
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:text="Hello,闪烁文字"
-        custom:end_color="#0000FF"
-        custom:middle_color="#000000"
-        custom:start_color="#00CCFF" />
+        <com.lpf.tools.views.TwinkleTextView
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:text="Hello,闪烁文字"
+            custom:end_color="#0000FF"
+            custom:middle_color="#000000"
+            custom:start_color="#00CCFF" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.lpf.tools.views.CustomCircleView
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            custom:border_color="@color/blue"
-            custom:border_width="3dp" />
-    </FrameLayout>
+            android:layout_height="wrap_content">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            <com.lpf.tools.views.CustomCircleView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                custom:border_color="@color/blue"
+                custom:border_width="3dp" />
+        </FrameLayout>
 
-        <com.lpf.tools.views.CustomCircleView
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            custom:border_color="@color/red"
-            custom:border_width="3dp" />
-    </FrameLayout>
+            android:layout_height="wrap_content">
+
+            <com.lpf.tools.views.CustomCircleView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                custom:border_color="@color/red"
+                custom:border_width="3dp" />
+        </FrameLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/btn_selector" />
 
 
-</LinearLayout>
+    </LinearLayout>
+
+
+
+</ScrollView>
